<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:orientation="vertical"
    android:textAlignment="viewStart"
    tools:context=".view.meeting.EditMeetingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/end"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/startDateHour"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:text="@string/start_date_hour" />

        <Button
            android:id="@+id/endDateHour"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="@string/end_date_hour" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/startLocation"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:text="@string/start_location" />

        <Button
            android:id="@+id/endLocation"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="@string/end_location" />

    </LinearLayout>

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine"
        android:maxLength="500" />

    <EditText
        android:id="@+id/etStory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/story_hint"
        android:inputType="textMultiLine"
        android:maxLength="5000" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-20dp"
        android:contentDescription="@string/rating_description"
        android:max="10"
        android:numStars="5"
        android:rating="0"
        android:scaleX="0.75"
        android:scaleY="0.75"
        android:stepSize="1"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:text="@string/btn_cancel" />

        <Button
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="@string/btn_add" />

    </LinearLayout>

</LinearLayout>