...
            android:layout_marginEnd="4dp"
            android:layout_weight="0"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_delete_item" />

        <ImageView
            android:id="@+id/edit_element"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_edit_item" />

        <ImageView
            android:id="@+id/add_element"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/add_element"
            app:srcCompat="@drawable/ic_add_item" />
...
